    * [BIGTOP-1768] - Use openjdk in ubuntu14, Remove references to jdk6 
    * [BIGTOP-1842] - Remove gridgain-hadoop from BOM
    * [BIGTOP-1899] - Migrate CI master to EC2 instance donated by Amazon EMR team
    * [BIGTOP-1900] - Upgrade bigtop/slaves images on bigtop's dockerhub
    * [BIGTOP-1901] - Provide bigtop/deploy images on dockerhub for CI and users to consume docker provisioner

** Bug
    * [BIGTOP-894] - Pig compilation fails on RPM systems on Bigtop trunk
    * [BIGTOP-965] - IntegrationTestHiveSmokeBulk not being run
    * [BIGTOP-972] - fix packagetest package remove logic
    * [BIGTOP-977] - hive smoke tests are full of internal infrastructure details irrelevant to Bigtop
    * [BIGTOP-1050] - Permissions on YARN LCE should be 4754
    * [BIGTOP-1104] - Fix lintian errors
    * [BIGTOP-1121] - implement tests for HDFS snapshots
    * [BIGTOP-1135] - Hue has google analytics enabled by default
    * [BIGTOP-1194] - redhat-lsb-core is sufficient in spec files
    * [BIGTOP-1277] - Remove Windows files from unix packaging
    * [BIGTOP-1287] - Mahout smokes : Remove dirchlet/meanshift clustering
    * [BIGTOP-1327] - bigpetstore.arch is out of date
    * [BIGTOP-1356] - Generate hive.install on the fly
    * [BIGTOP-1357] - Get rid of HCatalog packaging code
    * [BIGTOP-1381] - Datafu and Spark .deb build is broken 
    * [BIGTOP-1384] - Implement Gradle Wrapper for smoke tests and cleanup.
    * [BIGTOP-1395] - Simplifying non-component versions evaluation
    * [BIGTOP-1445] - Pig fails with clean .ivy and .m2
    * [BIGTOP-1446] - Spark fails with clean .m2
    * [BIGTOP-1451] - smoke-tests (gradle based) Mahout need to run a real smoke test.
    * [BIGTOP-1457] - Hue do-component-build does not set version properly
    * [BIGTOP-1458] - Maven build severly broken 
    * [BIGTOP-1459] - Remove hadoop-client jar from packages that bundle it
    * [BIGTOP-1460] - maven dependencies broken
    * [BIGTOP-1462] - Failed to build spark by gradle